<resources>
    <string name="app_name">PEN</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="already_registered_sign_in_here">Already Registered? Sign in here</string>
    <string name="enter_your_password">    Enter your password</string>
    <string name="full_name">Full name</string>
    <string name="enter_your_email">    Enter your email</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_profile_menu">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string-array name="introduction_jhs1">
        <item>Data on Weighing</item>
        <item>Density Tower</item>
        <item>Egg Float</item>
        <item>Sinkers and Floaters</item>
        <item>Cartesian Diver</item>
        <item>Construction of Eureka Can</item>
    </string-array>
    <string-array name="diversity_jh1">
        <item>Students as Matter</item>
        <item>Arranging States of Matter</item>
        <item>Changes of State</item>
        <item>Cell Models</item>
        <item>Capillary Rise
        </item>
        <item>Moving Matches</item>
        <item>Measuring Capillary Rise</item>
        <item>Automatic Irrigation</item>
        <item>Hazards (A Safety Game) </item>
    </string-array>
    <string-array name="cycles_jhs1">
        <item>Flower Structures</item>
        <item>Seed Germination</item>
        <item>Conditions for Germination</item>
    </string-array>
    <string-array name="systems_jhs1">
        <item>Breathing Model</item>
        <item>Respiration Cards</item>
        <item>Respiration Plates</item>
        <item>Lung Capacity</item>
    </string-array>
    <string-array name="energy_jhs1">
        <item>Sources of Energy</item>
        <item>Water Wheel</item>
        <item>Windmills</item>
        <item>Potential Energy of a Clothespin</item>
        <item>Chemical to Electrical Energy</item>
        <item>Light Travels in a Straight Line</item>
        <item>Pinhole Camera</item>
        <item>Formation of Shadows</item>
        <item>Periscope</item>
        <item>Rising Coin</item>
        <item>Circuit Boards</item>
        <item>Forward and Reverse Biased Diodes</item>
        <item>Switches</item>
        <item>Finding Circuit Components</item>
    </string-array>
    <string-array name="interactions_jhs1">
        <item>Ecosystems</item>
        <item>Camouflage and Protection</item>
        <item>Natural Selection Game</item>
        <item>Aquarium</item>
        <item>Terrarium</item>
        <item>Reactions to Light</item>
        <item>Reactions to Humidity</item>
        <item>Food Webs</item>
        <item>Food Chains Link</item>
        <item>Air Pollution(Smog)</item>
        <item>Greenhouse Bucket</item>
        <item>Physical or Chemical?</item>
        <item>Physical and Chemical Changes of Metals</item>
    </string-array>
    <string name="title_activity_measurement">Measurement</string>
    <string name="title_activity_data_onweighing">Data On Weighing</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_densitytower">Density Tower</string>
    <string name="title_activity_egg_float">Egg Float</string>
    <string name="title_activity_sinkers_and_floaters">Sinkers And Floaters</string>
    <string name="title_activity_cartesian_diver">Cartesian Diver</string>
    <string name="title_activity_construction_of_euraka">Construction of a Eureka Can</string>
    <string name="title_activity_student_as_matter">Student As Matter</string>
    <string name="dataweighing">Fix a rubber band at one end to a table or retort stand. At the other end, attach a paper clip to act as a pointer and a small bag or scale pan. Fill the bag or scale pan with successive numbers of nails. Have students measure the extension of the rubber band each time they add more nails. Record the readings and use the data to draw a graph as shown in the ﬁgure.</string>
    <string name="density_material">Syringes, water, honey, glycerine, cooking oil, spirit, kerosene, small objects </string>
    <string name="density_procedure">Add each liquid into the syringe, one by one, observing the relative depths of each liquid. Place small solid objects e.g. rubber erasers, paper clips, small nails, etc. into the syringe and observe their positions relative to the various liquids. </string>
    <string name="density_question">Which liquid is the most dense? Which is the least dense? </string>
    <string name="density_observation">The denser liquids sink to the bottom while the less dense liquids rise to the top. The solid objects settle among liquids of comparable density.  </string>
    <string name="density_applications">Relative densities of liquids and solids help to identify certain substances, e.g. whether a ring is really made of gold. </string>
    <string name="density_note">Food coloring can be added to colorless liquids such as water, kerosene and glycerine to help distinguish among them.</string>
    <string name="eggfloat_material"> 2 fresh eggs, 2 containers (bottles cut in half), salt (less than half a cup) </string>
    <string name="eggfloat_setup">Fill the two containers with water and place a fresh egg in each. </string>
    <string name="eggfloat_procedure"> Leave one as it is and add salt to the other. Add and mix salt until the egg ﬂoats in the saltwater container. </string>
    <string name="eggfloat_questions">Why does the egg ﬂoat in saltwater but sink in fresh water? </string>
    <string name="eggfloat_theory"> Saltwater has a greater density than fresh water. A fresh egg has a density between fresh water and saltwater. Since an egg is denser than freshwater, it sinks. Since an egg is less dense than saltwater, it ﬂoats. </string>
    <string name="eggfloat_application">This is the same reason why it is easier to stay aﬂoat when swimming in the ocean (saltwater) as opposed to a lake (fresh water).</string>
    <string name="sinkers_material"> Basin of water, various objects, e.g. nail, paper clip, paper, aluminum foil, soda cap, matchbox, pen cap, toothpick, balloons, ﬂour </string>
    <string name="sinkers_setup"> Fill one balloon with ﬂour, one with water, and one with air. They should all be the same size. </string>
    <string name="sinkers_procedure"> Have students predict the outcome for each object. Then place each object in the water, ﬁrst by placing very carefully, then by dropping it in.</string>
    <string name="sinkers_questions">
        1. What factors aﬀect whether an object sinks or ﬂoats? \n2. How do large objects such as boats ﬂoat?
</string>
    <string name="sinkers_observation"> A bottle cap placed carefully on the surface of the water will ﬂoat, but when pushed under, will sink. A sheet of aluminum foil will ﬂoat while a sheet of the same size which is folded several times will sink. A balloon ﬁlled with ﬂour sinks, one ﬁlled with water just ﬂoats, and one ﬁlled with air ﬂoats above the surface. </string>
    <string name="sinkers_theory"> Flotation depends on buoyancy. If the buoyancy force on an object (upward force from ﬂuid) is greater than its weight (downward force from gravity), the object will ﬂoat. However if the weight is greater than the buoyancy, the object will sink. The weight of an object depends on its average density, so decreasing average density (by ﬁlling it with air, for example) can allow even very heavy objects, such as steel boats, to ﬂoat.</string>
    <string name="sinkers_application"> Conduct this activity as an experiment with students. Let them make predictions on which items will sink and ﬂoat beforehand.
</string>
    <string name="cartesian_material"> 1.5 L plastic bottle, balloon, paper clips (large), water </string>
    <string name="cartesian_setup">Fill the bottle with water. Fix a large paper clip to the lip of a balloon. Making sure to keep all air out of the balloon, insert it into the bottle. It should just ﬂoat at the top while remaining completely submerged. Adjust depending on type of balloon and paper clips. </string>
    <string name="cartesian_procedure"> Screw the cap on the bottle and squeeze the middle of the bottle, then release. </string>
    <string name="cartesian_observation">The balloon should begin to sink when you squeeze, but ﬂoat again when you release. </string>
    <string name="catersian_theory">While water is nearly incompressible, the balloon (and any small amount of air inside) is compressible. This means when you squeeze the bottle, the water remains unchanged, but the balloon is compressed, decreasing its volume and so increasing its density. Before squeezing, it was less dense than the water and so it ﬂoated. After squeezing, it becomes denser than the water and sinks.</string>
    <string name="eureka_material">Plastic bottle, knife</string>
    <string name="eureka_procedure"> Cut a plastic bottle about 10 cm from the bottom. Cut 2 slits at the top of the bottle and bend the strip forward to form a spout. </string>
    <string name="eureka_applications">Measuring the volume of irregular objects, Archimedes’ Principle</string>
    <string name="studentasmatter_procedure"> Use students to demonstrate the concept of states of matter. </string>
    <string name="studentasmatter_theory">When students or objects are close together, they represent particles in the solid state. As they move apart and past each other they represent particles in the liquid state. Fast and randomly moving pupils or objects represent particles in the gaseous state.</string>
    <string name="arranging_material">Bottle caps, paper </string>
    <string name="arranging_procedure">Have students arrange bottle caps to represent the different states of matter, using labels from paper or cardboard. </string>
    <string name="arranging_theory">The spacing of the bottle caps represents the distance between particles in each state. Particles have large spaces between them in gases, less space in liquids, and are very condensed in solids.</string>
    <string name="changeofstate_material"> Tin can, glass bottle, water, Heat Sources </string>
    <string name="changeofstate_procedure"> Pour a small amount of water into a tin can and heat it until it boils. Fill a bottle with cool water and hold it above the tin can.</string>
    <string name="changeofstate_observation"> Water drops form on the outside of the cool bottle when it is touched by the steam of the boiling water. </string>
    <string name="breathingmodel_material">Plastic bottle, balloons, plastic bag, string/rubber band, straw </string>
    <string name="breathingmodel_procedure"> Cut the bottom oﬀ a plastic bottle. Attach a balloon over the bottle mouth so it hangs inside. Fix a piece of plastic bag over the cut base end using string or a rubber band. (Optional: Fix a straw through the bottle top and attach 1 or 2 balloons to the end inside the bottle.) </string>
    <string name="breathingmodel_observation"> Pulling the plastic bag down causes the balloon to inflate; pushing it up causes the balloon the deﬂate. </string>
    <string name="breathingmodel_theory">The balloon(s) represents the lung(s), the plastic bag the diaphragm, the bottle the thoracic cavity (and the straw the esophagus). Pulling the plastic sheet down causes an expansion of the cavity bringing about inspiration and causing the balloon to inflate. Pushing the sheet up reduces the volume of the cavity, causing expiration and the balloon to deﬂate. </string>
    <string name="breathingmodel_notes"> Tell students that this model does not show the expansion and contraction of the rib cage with breathing.</string>
</resources>